finished outter frame

--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
 
 <body>
     <div class="main">
-
+        <div class="navbar"></div>
+        <div class="container">
+            <div class="leftcolumn">
+                <div class="usercard"></div>
+                <div class="education"></div>
+            </div>
+            <div class="rightcolumn">
+                <div class="requests"></div>
+                <div class="connection"></div>
+            </div>
+        </div>
     </div>
 </body>
 
