added top nav content

--- a/index.html
+++ b/index.html
@@ -11,15 +11,25 @@
 
 <body>
     <div class="main">
-        <div class="navbar"></div>
-        <div class="container">
-            <div class="leftcolumn">
-                <div class="usercard"></div>
-                <div class="education"></div>
+        <div class="navbar">
+            <div class="navleft">
+                <a id="profile" href="#">Profile</p>
+                <a href="#">Home</p>
+                <a href="#">My Profile</p>
+                <a href="#">Find Connections</p>
             </div>
-            <div class="rightcolumn">
-                <div class="requests"></div>
-                <div class="connection"></div>
+            <div class="navright">
+                <button type="button ">Sign Out</button>
+            </div>
+        </div>
+        <div class="container ">
+            <div class="leftcolumn ">
+                <div class="usercard "></div>
+                <div class="education "></div>
+            </div>
+            <div class="rightcolumn ">
+                <div class="requests "></div>
+                <div class="connection "></div>
             </div>
         </div>
     </div>
