--- a/index.html
+++ b/index.html
@@ -13,23 +13,65 @@
     <div class="main">
         <div class="navbar">
             <div class="navleft">
-                <a id="profile" href="#">Profile</p>
-                <a href="#">Home</p>
-                <a href="#">My Profile</p>
-                <a href="#">Find Connections</p>
+                <a id="profile" href="#">Profile</a>
+                <a href="#">Home</a>
+                <a href="#">My Profile</a>
+                <a href="#">Find Connections</a>
             </div>
             <div class="navright">
-                <button type="button ">Sign Out</button>
+                <button type="button">Sign Out</button>
             </div>
         </div>
         <div class="container ">
             <div class="leftcolumn ">
-                <div class="usercard "></div>
-                <div class="education "></div>
+                <div class="usercard ">
+                    <div class="user-top"></div>
+                    <img class="user" src="./assets/images/jane-m.jpg" alt="profile picture">
+                    <div class="user-bottom">
+                        <h1 class="user-content">Jane Doe</h1>
+                        <img class="user-content user-map" src="./assets/icons/map-marker.png" alt="map icon">
+                        <h2 class="user-content">Seattle</h2>
+                        <div class="user-paragraph user-content">
+                            <p>Developer | Engineer | Problem Solver</p>
+                            <p>Master of shadows and the Internet!</p>
+                        </div>
+                        <img class="user-content user-gear" src="./assets/icons/gear.png" alt="gear icon">
+                        <a class="user-content user-link" href="#">edit profile</a>
+                    </div>
+                </div>
+                <div class="education">
+                    <div class="box-top">
+                        <p>Education</p>
+                    </div>
+                    <div class="box-bottom">
+                        <p>Coding Dojo - Full Stack Bootcamp</p>
+                        <p>Dec 2019 - Mar 2020</p>
+                        <p>Triple black belt in Python, MERN, and C#...</p>
+                    </div>
+                </div>
             </div>
-            <div class="rightcolumn ">
-                <div class="requests "></div>
-                <div class="connection "></div>
+            <div class="rightcolumn">
+                <div class="requests">
+                    <div class="box-top">
+                        <button class="number-buttons">2</button>
+                        <p>Connection Requests</p>
+                    </div>
+                    <div class="box-bottom">
+
+                    </div>
+                </div>
+                <div class="connection">
+                    <div class="box-top">
+                        <button class="number-buttons">500+</button>
+                        <p>Your Connections</p>
+                    </div>
+                    <div class="box-bottom">
+
+                    </div>
+                    <div class="connection-bottom">
+
+                    </div>
+                </div>
             </div>
         </div>
     </div>
