--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
                     <div class="box-top">
                         <p>Education</p>
                     </div>
-                    <div class="box-bottom">
+                    <div class="box-bottom education-bottom">
                         <p>Coding Dojo - Full Stack Bootcamp</p>
-                        <p>Dec 2019 - Mar 2020</p>
+                        <div id="education-date">
+                            <p>Dec 2019 - Mar 2020</p>
+                        </div>
                         <p>Triple black belt in Python, MERN, and C#...</p>
                     </div>
                 </div>
@@ -57,7 +59,22 @@
                         <p>Connection Requests</p>
                     </div>
                     <div class="box-bottom">
-
+                        <div class="user-row">
+                            <img src="./assets/images/todd-s.jpg" alt="Profile Picture">
+                            <p>Todd E</p>
+                            <div class="accept-boxes">
+                                <img src="./assets/icons/accept-circle.png" alt="Accept Button">
+                                <img src="./assets/icons/close-circle.png" alt="Close Button">
+                            </div>
+                        </div>
+                        <div class="user-row">
+                            <img src="./assets/images/phil-s.jpg" alt="Profile Picture">
+                            <p>Phil K</p>
+                            <div class="accept-boxes">
+                                <img src="./assets/icons/accept-circle.png" alt="Accept Button">
+                                <img src="./assets/icons/close-circle.png" alt="Close Button">
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="connection">
@@ -66,10 +83,25 @@
                         <p>Your Connections</p>
                     </div>
                     <div class="box-bottom">
-
+                        <div class="user-row">
+                            <img src="./assets/images/adrien-s.jpg" alt="Profile Picture">
+                            <p>Adrien D</p>
+                        </div>
+                        <div class="user-row">
+                            <img src="./assets/images/anne-s.jpg" alt="Profile Picture">
+                            <p>Anne J</p>
+                        </div>
+                        <div class="user-row">
+                            <img src="./assets/images/alayne-s.jpg" alt="Profile Picture">
+                            <p>Alayne T</p>
+                        </div>
+                        <div class="user-row">
+                            <img src="./assets/images/arry-s.jpg" alt="Profile Picture">
+                            <p>Arry Y</p>
+                        </div>
                     </div>
                     <div class="connection-bottom">
-
+                        <a href="#">View More</a>
                     </div>
                 </div>
             </div>
